--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
         "cub3d.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "get_next_line.h": "c"
     }
 }
